--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,1 +1,26 @@
+.wave{
+    top: 0;
+    left: 50%;
+    width: 500px;
+    height: 500px;
+    opacity: 1;
+    position: absolute;
+    margin-top: -480px;
+    margin-left: -250px;
+    border-radius: 43%;
+    transform-origin: 50% 49%;
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,.14),0 6px 30px 5px rgba(0,0,0,.12),0 8px 10px -5px rgba(0,0,0,.3);
+    -webkit-animation: drift 8s linear infinite;
+    animation: drift 8s linear infinite;
+  
+}
 
+@keyframes drift{
+ 
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(1turn);
+      }
+}
