--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,3 +24,64 @@
         transform: rotate(1turn);
       }
 }
+
+.followme{
+top: 70px;
+left: -26px;
+width: 68px;
+height: 20px;
+color: #151812;
+font-size: 14px;
+font-weight: 600;
+line-height: 1.2;
+white-space: nowrap;
+position: relative;
+transform: rotate(-90deg);
+}
+.followme::after{
+    top: 9px;
+    right: -48px;
+    width: 40px;
+    height: 1px;
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #151812;
+}
+
+
+
+
+.headerdots{
+    top: 50%;
+right: 30px;
+width: 20px;
+height: 300px;
+padding: 0;
+display: flex;
+flex-wrap: nowrap;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+align-content: stretch;
+position: fixed;
+list-style: none;
+margin-top: -150px;
+}
+
+.headerdots li {
+    margin-bottom: 14px;
+  }
+
+  .headerdots li a {
+    display: block;
+  }
+
+  .headerdotsCircle {
+    width: 10px;
+    height: 10px;
+    display: block;
+    border-radius: 50%;
+    border: 1px solid #151812;
+  }
+
