--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,5 +30,84 @@
     .background-primary{
       background-color: var(--primary-color);
     }
+
+    .active span{
+      border-color: var(--primary-color);
+      background-color: var(--primary-color);
+  
+  }
+
+  /* sidebar */
+  .sidenav-nav {
+    padding: 10;
+    list-style: none;
+  }
+
+  .sidenav-nav li{
+    height: 40px;
+    color: #151812;
+    font-weight: 600;
+    text-transform: uppercase;
+    position: relative;
+    margin-bottom: 15px;
+  }
+
+  .sidenav-nav li a{
+    color: #fff;
+
+  }
+  .sidenav-nav li a.active{
+    color: #000;
+    
+  }
+
+  .sidenav-nav li::before {
+    top: 32px;
+left: -4px;
+    width: 10px;
+    height: 10px;
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    border: 1px solid #151812;
+  }
+
+  .sidenav-nav li span {
+    top: 10px;
+    left: 18px;
+    opacity: .75;
+    font-size: 36px;
+    position: absolute;
+    white-space: nowrap;
+  }
+
+  .sidenav-nav li:hover span {
+    top: 10px;
+    left: 18px;
+    opacity: 1;
+    font-size: 36px;
+    position: absolute;
+    white-space: nowrap;
+  }
+
+  .sidenav-links {
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 39px;
+    padding-left: 30px;
+    position: absolute;
+  }
+
+  .sidenav-links ul {
+    float: right;
+    padding-right: 30px;
+    list-style: none;
+  }
+  .sidenav-links ul li {
+    font-size: 14px;
+    margin-left: 15px;
+    display: inline-block;
+  }
   }
 
