--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,13 @@
-@import url("./fonts/soloist-halftone");
-@import url("./fonts/context.css");
-@import url('./fonts/pilot-command.css');
+@import url('https://fonts.googleapis.com/css2?family=Monofett&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400&display=swap');
+
+@import url("../pages/home/grain.css");
 
 :root {
     --primary-color: #adff02;
     --white-color: #fff;
+    --size: 15px; 
+    --primary-shadow: #adff02;
   }
 
 @tailwind base;
@@ -12,102 +15,28 @@
 @tailwind utilities;
 
 @layer base {
-    .fs-custom-primary {
-        font-family: "Soloist Halftone", sans-serif;
-      }
-
-      .fs-custom-secondary {
-        font-family: "context", sans-serif;
-      }
-
-      .fs-custom-third {
-        font-family: "pilot command", sans-serif;
-      }
-
-      .text-primary-500{
-        color: var(--primary-color);
-    }
-    .background-primary{
-      background-color: var(--primary-color);
-    }
-
-    .active span{
-      border-color: var(--primary-color);
-      background-color: var(--primary-color);
-  
+  *{
+    padding: 0%;
+    margin: 0%;
+  }
+  body {
+    /* /23497.jpg */
+    background-image: url("/background.jpeg"); 
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    overflow-y: auto !important;
+  }
+  .background-primary{
+    background-color: var(--primary-color);
+  }
+  .text-primary{
+    color: var(--primary-color) !important;
   }
 
-  /* sidebar */
-  .sidenav-nav {
-    padding: 10;
-    list-style: none;
+  .border-primary{
+    border-color: var(--primary-color) !important;
   }
-
-  .sidenav-nav li{
-    height: 40px;
-    color: #151812;
-    font-weight: 600;
-    text-transform: uppercase;
-    position: relative;
-    margin-bottom: 15px;
-  }
-
-  .sidenav-nav li a{
-    color: #fff;
-
-  }
-  .sidenav-nav li a.active{
-    color: #000;
-    
-  }
-
-  .sidenav-nav li::before {
-    top: 32px;
-left: -4px;
-    width: 10px;
-    height: 10px;
-    content: "";
-    position: absolute;
-    border-radius: 50%;
-    border: 1px solid #151812;
-  }
-
-  .sidenav-nav li span {
-    top: 10px;
-    left: 18px;
-    opacity: .75;
-    font-size: 36px;
-    position: absolute;
-    white-space: nowrap;
-  }
-
-  .sidenav-nav li:hover span {
-    top: 10px;
-    left: 18px;
-    opacity: 1;
-    font-size: 36px;
-    position: absolute;
-    white-space: nowrap;
-  }
-
-  .sidenav-links {
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 39px;
-    padding-left: 30px;
-    position: absolute;
-  }
-
-  .sidenav-links ul {
-    float: right;
-    padding-right: 30px;
-    list-style: none;
-  }
-  .sidenav-links ul li {
-    font-size: 14px;
-    margin-left: 15px;
-    display: inline-block;
-  }
-  }
-
+  /*  */
+}
