--- a/public/stars.css
+++ b/public/stars.css
@@ -1,10 +1,4 @@
-.bg-animation {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+
 
 .bg-animation {
     position: fixed;
@@ -12,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-
+    z-index: -100;
 }
 
 #stars {
