--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -4,8 +4,9 @@ html
         title #{title}
         link(rel="stylesheet", href="/styles.css")
         link(rel="stylesheet", href="/stars.css")
-        script (src="https://unpkg.com/htmlx.org@1.9.12")
+        script(src="https://unpkg.com/htmx.org@2.0.2")
     body 
         header 
+        include ../partials/header.pug
         include ../components/stars.pug
         block content
