--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -2,11 +2,11 @@ doctype html
 html
     head 
         title #{title}
-        link(rel="stylesheet", href="/styles.css")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/stars.css")
+        link(rel="stylesheet", href="/styles.css")
         script(src="https://unpkg.com/htmx.org@2.0.2")
     body 
-        header 
         include ../partials/header.pug
         include ../components/stars.pug
         block content
