--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,6 +1,8 @@
 header
   nav(id="header-menu")
-    h1 #{brief.username}
+    div.brand
+        h1 #{brief.username}
+        div: img(src="/images/brush-line.svg", alt="")
     ul
         li: a.btn(
             hx-get="/"
@@ -20,6 +22,13 @@ header
             hx-push-url="true"
             hx-swap="innerHTML"
         ) Work
+        li: a Blog
+        li: a.btn(
+            hx-get="/contact"
+            hx-target="body"
+            hx-push-url="true"
+            hx-swap="innerHTML"
+        ) Contact
     ul
         li(title="see said ait driss profile on meduim platform"): a(href='/work'): img(src="/images/meduim.svg", alt="see said ait driss profile on meduim platform")
         li(title="see said ait driss profile on linkden platform"): a(href="/"): img(src="/images/linkden.svg", alt="see said ait driss profile on linkden platform")
