--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -1,6 +1,6 @@
 include ../components/button.pug
 main(id="contact")
-    div 
+    .left 
         h2 contact.
         div 
             .image-container
