--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -13,7 +13,7 @@ main(id="contact")
         form.form
             .form-controll
                 label(for="email") Email Address :
-                input(type="email", placeholder="example@gmail.com")
+                input(type="email", name="email", placeholder="example@gmail.com")
             .form-controll
                 label(for="message") Your Message :
                 textarea(name="message", placeholder="Your Message here")
