--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -5,6 +5,7 @@ html
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="/stars.css")
         link(rel="stylesheet", href="/styles.css")
+        script(src="/script.js")
         script(src="https://unpkg.com/htmx.org@2.0.2")
     body 
         include ../partials/header.pug
