--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -33,3 +33,32 @@ header
         li(title="see said ait driss profile on meduim platform"): a(href='/work'): img(src="/images/meduim.svg", alt="see said ait driss profile on meduim platform")
         li(title="see said ait driss profile on linkden platform"): a(href="/"): img(src="/images/linkden.svg", alt="see said ait driss profile on linkden platform")
         li(title="see said ait driss profile on x platform"): a(href='/'): img(src="/images/x.svg", alt="see said ait driss profile on x platform")
+
+    span.btn#menu-btn: img(src="/images/menu.svg", alt="mobile menu for said ait driss portfolio")
+    div#mobile-menu
+        ul.mobile-links
+            li: a.btn(
+                hx-get="/"
+                hx-target="body"
+                hx-push-url="true"
+                hx-swap="innerHTML"
+            ) Home
+            li: a.btn(
+                hx-get="/about"
+                hx-target="body"
+                hx-push-url="true"
+                hx-swap="innerHTML"
+            ) About
+            li: a.btn(
+                hx-get="/work"
+                hx-target="body"
+                hx-push-url="true"
+                hx-swap="innerHTML"
+            ) Work
+            li: a Blog
+            li: a.btn(
+                hx-get="/contact"
+                hx-target="body"
+                hx-push-url="true"
+                hx-swap="innerHTML"
+            ) Contact
