--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -9,7 +9,7 @@ main(id="contact")
     .right 
         strong Get in Touch!
         p Let’s start a conversation!
-        p I’d love to hear from you! If you have any questions, feedback, or just want to connect, feel free to reach out. You can contact me via :
+        p I’d love to hear from you! If you have any questions, feedback, or just want to connect, feel free to reach out.
         form.form
             .form-controll
                 label(for="email") Email Address :
