--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -9,8 +9,8 @@ main(id="home")
                 span #{word}
                 br
         p based in #{brief.country}
-        +button('Resume', 'btn-primary', 'button')
-        +button('Hire Me', 'btn-primary', 'button')
+        +button('Resume', 'btn-primary', 'button', 'resume-button')
+        +button('Hire Me', 'btn-primary', 'button', 'email-button')
     div.right
         div.image-container
             div.user-photo
