--- a/public/styles.css
+++ b/public/styles.css
@@ -513,6 +513,30 @@ input:focus,textarea:focus {
     font-weight: bold;
 }
 /* end of input */
+
+/* begin of alerts */
+#alert{
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    margin-bottom: 0 !important;
+}
+.error-alert,.success-alert{
+    padding: var(--sm-padding);
+    border-radius: var(--main-border-raduis);
+    width: 100% !important;
+    height: fit-content !important;
+}
+.error-alert{
+    border: 1px solid red;
+    color: red !important;
+    background-color: rgba(216, 19, 19, 0.274);
+}
+.success-alert{
+    border: 1px solid green;
+    color: green !important;
+    background-color: rgba(19, 216, 19, 0.274);
+}
+/* end of alerts */
 /* end of components */
 
 
@@ -601,7 +625,7 @@ input:focus,textarea:focus {
     }
 }
 
-@media only screen and (max-width: 380px) { 
+@media only screen and (max-width: 400px) { 
     *{
         font-size: 12px;
     }
