--- a/views/pages/contact.pug
+++ b/views/pages/contact.pug
@@ -10,12 +10,13 @@ main(id="contact")
         strong Get in Touch!
         p Let’s start a conversation!
         p I’d love to hear from you! If you have any questions, feedback, or just want to connect, feel free to reach out.
-        form.form
+        div#alert
+        form.form(hx-post="/contact", hx-target="#alert", hx-swap="innerHTML")
             .form-controll
                 label(for="email") Email Address :
-                input(type="email", name="email", placeholder="example@gmail.com")
+                input(type="email", name="email", placeholder="example@gmail.com", required)
             .form-controll
                 label(for="message") Your Message :
                 textarea(name="message", placeholder="Your Message here")
             .form-controll 
-                +button('Submit', 'btn-primary', 'button')
+                +button('Submit', 'btn-primary', 'submit')
